@@ -1,24 +1,14 @@
 package com.tomo.service.category.impl;
 
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.tomo.feign.CoinGeckoClient;
-import com.tomo.model.ChainCoinGeckoEnum;
-import com.tomo.model.ChainEnum;
-import com.tomo.model.ChainUtil;
-import com.tomo.model.CoinGeckoEnum;
-import com.tomo.model.IntervalEnum;
-import com.tomo.model.TokenBase;
-import com.tomo.model.dto.TokenCategoryCoinGeckoDTO;
-import com.tomo.model.dto.TokenInfoDTO;
-import com.tomo.model.dto.TokenOhlcvDTO;
-import com.tomo.model.dto.TokenPriceDTO;
-import com.tomo.model.dto.TokenRiskGoplusDTO;
+import com.tomo.model.*;
+import com.tomo.model.dto.*;
 import com.tomo.model.req.OnchainTokenReq;
 import com.tomo.model.req.PlatformTokenReq;
-import com.tomo.model.resp.CoinInfoResp;
-import com.tomo.model.resp.DexTokenResp;
-import com.tomo.model.resp.DexTokensPriceResp;
-import com.tomo.model.resp.TokenPriceResp;
+import com.tomo.model.resp.*;
 import com.tomo.service.TokenInfoCacheService;
 import com.tomo.service.category.CoinGeckoService;
 import com.tomo.service.category.TokenCategoryDataService;
@@ -26,23 +16,23 @@ import com.tomo.service.category.TokenInfoService;
 import com.tomo.service.price.KLineService;
 import com.tomo.service.price.TokenPriceDataService;
 import jakarta.annotation.Nullable;
+import jakarta.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.collections4.ListUtils;
+import org.jetbrains.annotations.NotNull;
+import org.apache.commons.collections4.ListUtils;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.data.util.Pair;
 import org.springframework.stereotype.Service;
 import org.springframework.util.CollectionUtils;
+import org.springframework.util.StopWatch;
 import org.springframework.util.StringUtils;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Function;
@@ -66,6 +56,147 @@ public class CoinGeckoServiceImpl implements CoinGeckoService {
     @Autowired
     TokenInfoCacheService tokenInfoCacheService;
 
+    @Autowired
+    private RedisTemplate<String, Object> redisTemplate;
+
+    @Value("${cgs.onchain.token.info.chuck}")
+    private int onChainTokenInfoChuck;
+
+    @Value("${cgs.onchain.token.info.concurrent}")
+    private int onChainFetchTokenInfoConcurrent;
+
+    @Value("${cache.key.token.info.prefix}")
+    private String REDIS_TOKEN_INFO_PREFIX;
+
+    @Value("${cache.key.token.price.prefix}")
+    private String REDIS_TOKEN_PRICE_PREFIX;
+
+    @Resource
+    private ObjectMapper objectMapper;
+
+    private static String getPatternStr(String data, int index) {
+        String regex = "^[^_]+_(.+)$";
+        Pattern pattern = Pattern.compile(regex);
+        Matcher matcher = pattern.matcher(data);
+        if (matcher.matches()) {
+            return matcher.group(index);
+        }
+        return null;
+    }
+
+    private static void setTokenInfoAndPrice(Long chainId,
+                                             @Nullable CoinInfoResp.DetailPlatform detailPlatform,
+                                             CoinInfoResp oldTokenCategory,
+                                             TokenPriceResp oldTokenPrice,
+                                             TokenCategoryCoinGeckoDTO newTokenCategoryCoinGeckoDTO,
+                                             TokenPriceDTO newTokenPrice) {
+        // token
+        setPlatformTokenInfo(oldTokenCategory, detailPlatform, newTokenCategoryCoinGeckoDTO);
+        newTokenCategoryCoinGeckoDTO.setChainId(chainId);
+//        newTokenCategoryCoinGeckoDTO.setCoingeckoChainId(ChainUtil.getChainAndCoinGeckoMap().get(chainId).getCoinGeckoEnum().getPlatformChainId());
+        // price
+        setPlatformTokenPrice(newTokenPrice, oldTokenPrice, oldTokenCategory);
+        newTokenPrice.setChainId(chainId);
+        newTokenPrice.setAddress(oldTokenCategory.getContractAddress());
+    }
+
+    private static void setPlatformTokenInfo(CoinInfoResp platformCoinInfo,
+                                             CoinInfoResp.DetailPlatform detailPlatform,
+                                             TokenCategoryCoinGeckoDTO newTokenCategoryCoinGeckoDTO) {
+        if (detailPlatform != null) {
+            newTokenCategoryCoinGeckoDTO.setAddress(detailPlatform.getContractAddress());
+            newTokenCategoryCoinGeckoDTO.setDecimals(detailPlatform.getDecimalPlace());
+        }
+        if (platformCoinInfo != null) {
+            newTokenCategoryCoinGeckoDTO.setCoingeckoCoinId(platformCoinInfo.getId());
+            newTokenCategoryCoinGeckoDTO.setName(platformCoinInfo.getName());
+            newTokenCategoryCoinGeckoDTO.setSymbol(platformCoinInfo.getSymbol());
+            newTokenCategoryCoinGeckoDTO.setImageUrl(platformCoinInfo.getImage().getSmall());
+            if (platformCoinInfo.getLinks() != null) {
+                if (!CollectionUtils.isEmpty(platformCoinInfo.getLinks().getHomepage()) && StringUtils.hasLength(platformCoinInfo.getLinks().getHomepage().get(0))) {
+                    newTokenCategoryCoinGeckoDTO.setWebsiteUrl(platformCoinInfo.getLinks().getHomepage().get(0));
+                }
+                if (StringUtils.hasLength(platformCoinInfo.getLinks().getTwitterScreenName())) {
+                    newTokenCategoryCoinGeckoDTO.setTwitterUrl(String.format("https://x.com/%s", platformCoinInfo.getLinks().getTwitterScreenName()));
+                }
+                if (StringUtils.hasLength(platformCoinInfo.getLinks().getTelegramChannelIdentifier())) {
+                    newTokenCategoryCoinGeckoDTO.setTelegramUrl(String.format("https://t.me/%s", platformCoinInfo.getLinks().getTelegramChannelIdentifier()));
+                }
+            }
+        }
+    }
+
+    private static void setPlatformTokenPrice(TokenPriceDTO newTokenPrice,
+                                              TokenPriceResp tokenPriceResp,
+                                              CoinInfoResp platformCoinInfo) {
+        newTokenPrice.setRealPrice(BigDecimal.valueOf(tokenPriceResp.getRealPrice()));
+        newTokenPrice.setVolume24h(BigDecimal.valueOf(tokenPriceResp.getVolume24h()));
+        newTokenPrice.setChange24h(BigDecimal.valueOf(tokenPriceResp.getChange24h()));
+        newTokenPrice.setMarketCap(BigDecimal.valueOf(tokenPriceResp.getMarketCap()));
+        if (platformCoinInfo.getMarketData() != null && platformCoinInfo.getMarketData().getFullyDilutedValuation() != null) {
+            newTokenPrice.setFdvUsd(platformCoinInfo.getMarketData().getFullyDilutedValuation().getUsd());
+        }
+        if (platformCoinInfo.getMarketData() != null && platformCoinInfo.getMarketData().getTotalSupply() != null) {
+            newTokenPrice.setTotalSupply(platformCoinInfo.getMarketData().getTotalSupply().setScale(0, RoundingMode.FLOOR));
+        }
+    }
+
+    private static TokenCategoryCoinGeckoDTO setOnchainTokenInfo(DexTokenResp.DexData.Attributes attributes) {
+        TokenCategoryCoinGeckoDTO newTokenInfo = new TokenCategoryCoinGeckoDTO();
+        newTokenInfo.setIsNative(false);
+        newTokenInfo.setAddress(attributes.getAddress());
+        newTokenInfo.setCoingeckoCoinId(attributes.getCoingeckoCoinId());
+        newTokenInfo.setDecimals(attributes.getDecimals());
+        newTokenInfo.setName(attributes.getName());
+        newTokenInfo.setSymbol(attributes.getSymbol());
+        String imageUrl = attributes.getImageUrl();
+        if (!"missing.png".equals(imageUrl)) {
+            newTokenInfo.setImageUrl(imageUrl);
+        }
+        return newTokenInfo;
+    }
+
+    private static TokenPriceDTO setOnchainTokenPrice(Long chainId,
+                                                      DexTokenResp.DexData.Attributes attributes) {
+        TokenPriceDTO tokenPriceDTO = new TokenPriceDTO();
+        tokenPriceDTO.setChainId(chainId);
+        tokenPriceDTO.setAddress(attributes.getAddress());
+        if (attributes.getVolumeUsd() != null && attributes.getVolumeUsd().getH24() != null) {
+            tokenPriceDTO.setVolume24h(attributes.getVolumeUsd().getH24());
+        }
+        if (attributes.getPriceUsd() != null) {
+            tokenPriceDTO.setRealPrice(attributes.getPriceUsd());
+        }
+        if (attributes.getMarketCapUsd() != null) {
+            BigDecimal marketCapUsd = attributes.getMarketCapUsd();
+            if (attributes.getFdvUsd() != null && attributes.getMarketCapUsd().compareTo(attributes.getFdvUsd()) > 0) {
+                marketCapUsd = attributes.getFdvUsd();
+            }
+            tokenPriceDTO.setMarketCap(marketCapUsd);
+        }
+        if (attributes.getFdvUsd() != null) {
+            tokenPriceDTO.setFdvUsd(attributes.getFdvUsd());
+        }
+        if (attributes.getPriceChangePercentage() != null) {
+            tokenPriceDTO.setChange24h(attributes.getPriceChangePercentage().getH24());
+        }
+        if (attributes.getTotalSupply() != null && attributes.getDecimals() != null) {
+            tokenPriceDTO.setTotalSupply(attributes.getTotalSupply().movePointLeft(attributes.getDecimals()).setScale(0, RoundingMode.FLOOR));
+        }
+        return tokenPriceDTO;
+    }
+
+    public static String listToString(List<String> list) {
+        return String.join(",", list);
+    }
+
+    public static <T> List<List<T>> getPartitions(List<T> tokens, int partitionNum) {
+        List<List<T>> partitions = new LinkedList<>();
+        for (int i = 0; i < tokens.size(); i += partitionNum) {
+            partitions.add(tokens.subList(i, Math.min(i + partitionNum, tokens.size())));
+        }
+        return partitions;
+    }
 
     @Override
     public TokenInfoDTO queryOneByOnchain(OnchainTokenReq tokenReq, boolean include) {
@@ -74,7 +205,7 @@ public class CoinGeckoServiceImpl implements CoinGeckoService {
         queryWrapper.eq(TokenInfoDTO::getChainId, tokenReq.getChainId());
         List<TokenInfoDTO> list = tokenInfoService.list(queryWrapper);
         if (CollectionUtils.isEmpty(list)) {
-            Map<String, TokenInfoDTO> infoDTOMap = singleOnchainTokenInfoAndPrice(List.of(tokenReq), include);
+            Map<String, TokenInfoDTO> infoDTOMap = singleOnchainTokenInfoAndPrice(List.of(tokenReq), include, true);
             if (infoDTOMap.containsKey(tokenReq.getAddress())) {
                 return infoDTOMap.get(tokenReq.getAddress());
             }
@@ -82,10 +213,57 @@ public class CoinGeckoServiceImpl implements CoinGeckoService {
         return list.get(0);
     }
 
+    @Override
+    public List<OnChainTokenInfo> queryOnchainTokenInfos(List<OnchainTokenReq> reqs) {
+        if (CollectionUtils.isEmpty(reqs)) {
+            return new ArrayList<>();
+        }
+
+        StopWatch stopWatch = new StopWatch("QueryOnchainTokenInfos");
+        stopWatch.start("queryOnchainTokenInfos");
+        Pair<List<OnChainTokenInfo>, List<OnchainTokenReq>> cachedPair = queryCachedOnChainData(reqs, REDIS_TOKEN_INFO_PREFIX);
+        stopWatch.stop();
+        List<OnchainTokenReq> notExist = cachedPair.getSecond();
+        List<OnChainTokenInfo> tokenInfos = cachedPair.getFirst();
+
+        stopWatch.start("fetchOnChainTokenInfo");
+        Pair<List<OnChainTokenInfo>, List<OnChainTokenPrice>> fetchedPair = fetchOnChainTokenInfoAndPrice(notExist);
+        stopWatch.stop();
+
+        stopWatch.start("updateTokenInfoAndPriceCache");
+        updateTokenInfoAndPriceCache(fetchedPair);
+        stopWatch.stop();
+        log.info("Query on-chain token infos success, cached: {}, fetched: {} (Cost: {})", tokenInfos.size(), fetchedPair.getFirst().size(), stopWatch);
+        return ListUtils.union(tokenInfos, fetchedPair.getFirst());
+    }
+
+    @Override
+    public List<OnChainTokenPrice> queryOnChainTokenPrices(List<OnchainTokenReq> reqs) {
+        if (CollectionUtils.isEmpty(reqs)) {
+            return new ArrayList<>();
+        }
+
+        StopWatch stopWatch = new StopWatch("QueryOnchainTokenPrices");
+        stopWatch.start("queryOnchainTokenInfos");
+        Pair<List<OnChainTokenPrice>, List<OnchainTokenReq>> cachedPair = queryCachedOnChainData(reqs, REDIS_TOKEN_PRICE_PREFIX);
+        stopWatch.stop();
+        List<OnchainTokenReq> notExist = cachedPair.getSecond();
+        List<OnChainTokenPrice> tokenPrices = cachedPair.getFirst();
+
+        stopWatch.start("fetchOnChainTokenPrices");
+        Pair<List<OnChainTokenInfo>, List<OnChainTokenPrice>> fetchedPair = fetchOnChainTokenInfoAndPrice(notExist);
+        stopWatch.stop();
+
+        stopWatch.start("updateTokenInfoAndPriceCache");
+        updateTokenInfoAndPriceCache(fetchedPair);
+        stopWatch.stop();
+        log.info("Query on-chain token prices success, cached: {}, fetched: {} (Cost: {})", tokenPrices.size(), fetchedPair.getFirst().size(), stopWatch);
+        return ListUtils.union(tokenPrices, fetchedPair.getSecond());
+    }
+
     /**
-     *
      * @param rawTokenList
-     * @param include  是否查询池子信息
+     * @param include      是否查询池子信息
      * @return
      */
     @Override
@@ -115,49 +293,136 @@ public class CoinGeckoServiceImpl implements CoinGeckoService {
                 tokenList.stream()
                         .filter(e -> !StringUtils.hasText(e.getAddress()) && Objects.nonNull(e.getChainId()))
                         .toList();
-
+        long l1 = System.currentTimeMillis();
         chainTokenMap.forEach((chainId, tokens) -> {
             // 分隔成一组组
             List<List<OnchainTokenReq>> partitions = getPartitions(tokens, 30);
             // 遍历每组
             for (List<OnchainTokenReq> partition : partitions) {
-                Map<String, TokenInfoDTO> map = singleOnchainTokenInfoAndPrice(partition, include);
+                Map<String, TokenInfoDTO> map = singleOnchainTokenInfoAndPrice(partition, include, true);
                 resultMap.putAll(map);
             }
         });
+        long l2 = System.currentTimeMillis();
+        log.info("CoinGeckoServiceImpl batchOnchainCoinInfoAndPrice time1:{}", l2 - l1);
         List<PlatformTokenReq> nativeTokenList = nativeTokenMap
                 .stream()
                 .map(e -> {
                     PlatformTokenReq tokenReq = new PlatformTokenReq();
                     ChainCoinGeckoEnum chainCoinGeckoEnum = ChainUtil.getChainAndCoinGeckoMap().get(e.getChainId());
-                    if(chainCoinGeckoEnum!=null){
+                    if (chainCoinGeckoEnum != null) {
                         tokenReq.setCoingeckoCoinId(chainCoinGeckoEnum.getCoinGeckoEnum().getCoinId());
-                    }else{
-                       log.error("CoinGeckoServiceImpl batchOnchainCoinInfoAndPrice chainId not exist:{}",e.getChainId());
+                    } else {
+                        log.error("CoinGeckoServiceImpl batchOnchainCoinInfoAndPrice chainId not exist:{}", e.getChainId());
                     }
                     return tokenReq;
                 }).toList();
         Map<String, TokenInfoDTO> nativeTokenResultMap = batchPlatformCoinInfoAndPrice(nativeTokenList);
         resultMap.putAll(nativeTokenResultMap);
-
+        long l3 = System.currentTimeMillis();
+        log.info("CoinGeckoServiceImpl batchOnchainCoinInfoAndPrice time2:{}", l3 - l2);
 
         if (!CollectionUtils.isEmpty(first)) {
-            Map<String, TokenInfoDTO> existMap = updateOnchainPrice(first);
-            resultMap.putAll(existMap);
+            //Map<String, TokenInfoDTO> existMap = updateOnchainPrice(first);
+            resultMap.putAll(first);
         }
+        long l4 = System.currentTimeMillis();
+        log.info("CoinGeckoServiceImpl batchOnchainCoinInfoAndPrice time3:{}", l4 - l3);
+        return resultMap;
+    }
+
+    /**
+     * @param rawTokenList
+     * @param include      是否查询池子信息
+     * @return
+     */
+    @Override
+    public Map<String, TokenInfoDTO> batchOnchainCoinInfoAndPriceV2(List<OnchainTokenReq> rawTokenList, boolean include) {
+        Map<String, TokenInfoDTO> resultMap = new ConcurrentHashMap<>();
+        if (rawTokenList.size() > 300) {
+            return resultMap;
+        }
+        if (CollectionUtils.isEmpty(rawTokenList)) {
+            return resultMap;
+        }
+        // 1. 查数据库，分成已入库未入库两类
+        List<TokenBase> list = rawTokenList.stream().map(e -> new TokenBase(e.getAddress(), e.getChainId())).toList();
+        Pair<Map<String, TokenInfoDTO>, List<TokenBase>> tokenInfoFromDB = getTokenInfoFromDB(list);
+        Map<String, TokenInfoDTO> exist = tokenInfoFromDB.getFirst();
+        List<TokenBase> notExist = tokenInfoFromDB.getSecond();
+        //2. 处理未入库数据
+        Map<String, TokenInfoDTO> stringTokenInfoDTOMap = handleNotExistToken(notExist, include);
+        //3. 聚合返回
+        resultMap.putAll(exist);
+        resultMap.putAll(stringTokenInfoDTOMap);
+        return resultMap;
+
+    }
+
+    private Map<String, TokenInfoDTO> handleNotExistToken(List<TokenBase> second, boolean include) {
+        List<OnchainTokenReq> tokenList = second.stream().map(e -> new OnchainTokenReq(e.getChainId(), e.getAddress())).toList();
+        //存在地址的数据
+        Map<Long, List<OnchainTokenReq>> chainTokenMap = tokenList.stream()
+                .filter(e -> StringUtils.hasText(e.getAddress()) && Objects.nonNull(e.getChainId()))
+                .collect(Collectors.groupingBy(OnchainTokenReq::getChainId));
+        //不存在地址的数据
+        List<OnchainTokenReq> nativeTokenMap = tokenList.stream()
+                .filter(e -> !StringUtils.hasText(e.getAddress()) && Objects.nonNull(e.getChainId()))
+                .toList();
+        //处理链token
+        Map<String, TokenInfoDTO> stringTokenInfoDTOMap = handleChainToken(chainTokenMap, include);
+        Map<String, TokenInfoDTO> resultMap = new HashMap<>(stringTokenInfoDTOMap);
+
+        //处理链nativeToken
+        Map<String, TokenInfoDTO> nativeTokenResultMap = handleNativeToken(nativeTokenMap);
+        resultMap.putAll(nativeTokenResultMap);
+        return resultMap;
+    }
+
+    private Map<String, TokenInfoDTO> handleNativeToken(List<OnchainTokenReq> nativeTokenMap) {
+        List<PlatformTokenReq> nativeTokenList = nativeTokenMap
+                .stream()
+                .map(e -> {
+                    PlatformTokenReq tokenReq = new PlatformTokenReq();
+                    ChainCoinGeckoEnum chainCoinGeckoEnum = ChainUtil.getChainAndCoinGeckoMap().get(e.getChainId());
+                    if (chainCoinGeckoEnum != null) {
+                        tokenReq.setCoingeckoCoinId(chainCoinGeckoEnum.getCoinGeckoEnum().getCoinId());
+                    } else {
+                        log.error("CoinGeckoServiceImpl batchOnchainCoinInfoAndPrice chainId not exist:{}", e.getChainId());
+                    }
+                    return tokenReq;
+                }).toList();
+        return batchPlatformCoinInfoAndPrice(nativeTokenList);
+    }
+
+    private Map<String, TokenInfoDTO> handleChainToken(Map<Long, List<OnchainTokenReq>> chainTokenMap, boolean include) {
+        Map<String, TokenInfoDTO> resultMap = new HashMap<>();
+        chainTokenMap.forEach((chainId, tokens) -> {
+            // 分隔成30一组,三方接口限制
+            List<List<OnchainTokenReq>> partitions = getPartitions(tokens, 30);
+            // 遍历每组
+            for (List<OnchainTokenReq> partition : partitions) {
+                Map<String, TokenInfoDTO> map = singleOnchainTokenInfoAndPrice(partition, include, true);
+                resultMap.putAll(map);
+            }
+        });
         return resultMap;
     }
 
     @Override
     public Map<String, TokenInfoDTO> singleOnchainTokenInfoAndPrice(List<OnchainTokenReq> partition,
-                                                                    boolean include) {
+                                                                    boolean include, boolean saveToDb) {
         Map<String, TokenInfoDTO> resultMap = new ConcurrentHashMap<>();
+        List<TokenCategoryCoinGeckoDTO> tokenCategoryUpdateList = new ArrayList<>();
+        List<TokenPriceDTO> tokenPriceDTOUpdateList = new ArrayList<>();
+        List<TokenInfoDTO> tokenInfoDTOUpdateList = new ArrayList<>();
         try {
             if (CollectionUtils.isEmpty(partition)) {
                 return new HashMap<>();
             }
             Long chainId = partition.get(0).getChainId();
             ChainCoinGeckoEnum chainInfoEnum = ChainUtil.getChainAndCoinGeckoMap().get(chainId);
+
             if (Objects.isNull(chainInfoEnum)) {
                 return new HashMap<>();
             }
@@ -173,18 +438,33 @@ public class CoinGeckoServiceImpl implements CoinGeckoService {
                 String patternStr = getPatternStr(dexData.getId(), 0);
                 TokenCategoryCoinGeckoDTO tokenCategoryCoinGeckoDTO = setOnchainTokenInfo(attributes);
                 tokenCategoryCoinGeckoDTO.setChainId(chainId);
+                //传入的参数地址区分大小写，但三方结果全为小写，存数据库以传入为准，否则查不到
+                tokenCategoryCoinGeckoDTO.setAddress(oldTokenInfo.getAddress());
                 TokenPriceDTO tokenPriceDTO = setOnchainTokenPrice(oldTokenInfo.getChainId(), attributes);
                 tokenCategoryCoinGeckoDTO.setCoingeckoChainId(patternStr);
                 tokenPriceDTO.setCoingeckoChainId(patternStr);
+                //传入的参数地址区分大小写，但三方结果全为小写，存数据库以传入为准，否则查不到
+                tokenPriceDTO.setAddress(oldTokenInfo.getAddress());
                 if (include) {
                     setPoolInfo(dexTokenResp, dexData, tokenPriceDTO);
                 }
                 TokenInfoDTO tokenInfoDTO = convertTokenInfo(tokenCategoryCoinGeckoDTO, tokenPriceDTO, new TokenRiskGoplusDTO());
-                tokenCategoryDataService.insertOrUpdate(tokenCategoryCoinGeckoDTO);
-                tokenPriceDataService.insertOrUpdate(tokenPriceDTO);
-                tokenInfoService.insertOrUpdate(tokenInfoDTO);
+//                tokenCategoryDataService.insertOrUpdate(tokenCategoryCoinGeckoDTO);
+//                tokenPriceDataService.insertOrUpdate(tokenPriceDTO);
+//                tokenInfoService.insertOrUpdate(tokenInfoDTO);
+                tokenCategoryUpdateList.add(tokenCategoryCoinGeckoDTO);
+                tokenPriceDTOUpdateList.add(tokenPriceDTO);
+                tokenInfoDTOUpdateList.add(tokenInfoDTO);
                 resultMap.put(ChainUtil.getCommonKey(tokenInfoDTO.getChainId(), tokenInfoDTO.getAddress()), tokenInfoDTO);
             });
+            if (saveToDb) {
+                CompletableFuture.runAsync(() -> {
+                    //批量更新 可以异步优化
+                    tokenCategoryDataService.batchInsertOrUpdate(tokenCategoryUpdateList);
+                    tokenPriceDataService.batchInsertOrUpdate(tokenPriceDTOUpdateList);
+                    tokenInfoService.batchInsertOrUpdate(tokenInfoDTOUpdateList);
+                });
+            }
         } catch (Exception e) {
             log.error(e.getMessage(), e);
         }
@@ -221,16 +501,6 @@ public class CoinGeckoServiceImpl implements CoinGeckoService {
         return tokenInfoDTO;
     }
 
-    private static String getPatternStr(String data, int index) {
-        String regex = "^[^_]+_(.+)$";
-        Pattern pattern = Pattern.compile(regex);
-        Matcher matcher = pattern.matcher(data);
-        if (matcher.matches()) {
-            return matcher.group(index);
-        }
-        return null;
-    }
-
     private void setPoolInfo(DexTokenResp dexTokenResp, DexTokenResp.DexData dexData, TokenPriceDTO tokenPriceDTO) {
         if (dexTokenResp.getIncluded() == null) {
             return;
@@ -250,6 +520,18 @@ public class CoinGeckoServiceImpl implements CoinGeckoService {
         }
     }
 
+    public Map<String, TokenPriceResp> batchPlatformPrice(List<PlatformTokenReq> tokenList) {
+        if (tokenList.size() > 300 || CollectionUtils.isEmpty(tokenList)) {
+            return new HashMap<>();
+        }
+        String tokenIds = tokenList.stream()
+                .map(PlatformTokenReq::getCoingeckoCoinId)
+                .collect(Collectors.joining(","));
+
+        Map<String, TokenPriceResp> map = coinGeckoClient.getPlatformTokenPrice(tokenIds);
+        return CollectionUtils.isEmpty(map) ? new HashMap<>() : map;
+    }
+
 
     @Override
     public Map<String, TokenInfoDTO> batchPlatformCoinInfoAndPrice(List<PlatformTokenReq> tokenList) {
@@ -267,33 +549,35 @@ public class CoinGeckoServiceImpl implements CoinGeckoService {
         return resultMap;
     }
 
-
     @Override
     public Map<String, TokenInfoDTO> singlePlatformTokenInfoAndPrice(PlatformTokenReq token) {
         Map<String, TokenInfoDTO> resultMap = new HashMap<>();
         try {// coingecko请求基本数据
             CompletableFuture<CoinInfoResp> onlineTokenInfoFuture = CompletableFuture.supplyAsync(() -> coinGeckoClient.getPlatformCoinInfo(token.getCoingeckoCoinId()));
             CompletableFuture<Map<String, TokenPriceResp>> platformTokenPriceMapFuture = CompletableFuture.supplyAsync(() -> coinGeckoClient.getPlatformTokenPrice(token.getCoingeckoCoinId()));
-            Map<String, TokenPriceResp> platformTokenPriceMap =platformTokenPriceMapFuture.get();
+            Map<String, TokenPriceResp> platformTokenPriceMap = platformTokenPriceMapFuture.get();
             TokenPriceResp onlineTokenPrice = platformTokenPriceMap.get(token.getCoingeckoCoinId());
             if (CollectionUtils.isEmpty(platformTokenPriceMap)) {
                 return resultMap;
             }
-            CoinInfoResp onlineTokenInfo =onlineTokenInfoFuture.get();
+            CoinInfoResp onlineTokenInfo = onlineTokenInfoFuture.get();
             // 不同平台,循环遍历
             onlineTokenInfo.getPlatforms().forEach((assetPlatformId, address) -> {
                 try {
                     TokenCategoryCoinGeckoDTO coinGeckoDTO = new TokenCategoryCoinGeckoDTO();
+                    //没有assetPlatformId
                     boolean isNative = !StringUtils.hasText(assetPlatformId) && !StringUtils.hasText(address);
                     if (isNative) {
                         coinGeckoDTO.setIsNative(true);
-                        List<ChainCoinGeckoEnum> chainCoinGeckoEnums = ChainUtil.getNativeIdToEnum().getOrDefault(token.getCoingeckoCoinId(),new ArrayList<>());
-                        for (ChainCoinGeckoEnum coinGeckoEnum : chainCoinGeckoEnums) {
-                            setPlatformInfo(coinGeckoEnum, coinGeckoDTO, onlineTokenInfo, onlineTokenPrice, resultMap,false);
-                        }
-                    }else {
+                        List<ChainCoinGeckoEnum> chainCoinGeckoEnums = ChainUtil.getNativeIdToEnum().getOrDefault(token.getCoingeckoCoinId(), new ArrayList<>());
+                        batchSetPlatformInfo(chainCoinGeckoEnums, coinGeckoDTO, onlineTokenInfo, onlineTokenPrice, resultMap, false);
+//                        for (ChainCoinGeckoEnum coinGeckoEnum : chainCoinGeckoEnums) {
+//                            setPlatformInfo(coinGeckoEnum, coinGeckoDTO, onlineTokenInfo, onlineTokenPrice, resultMap,false);
+//                        }
+                    } else {
                         ChainCoinGeckoEnum coinGeckoEnum = ChainUtil.getCoinGeckoChainInfoMap().getOrDefault(assetPlatformId, null);
-                        setPlatformInfo(coinGeckoEnum, coinGeckoDTO, onlineTokenInfo, onlineTokenPrice, resultMap,false);
+                        batchSetPlatformInfo(List.of(coinGeckoEnum), coinGeckoDTO, onlineTokenInfo, onlineTokenPrice, resultMap, false);
+//                      setPlatformInfo(coinGeckoEnum, coinGeckoDTO, onlineTokenInfo, onlineTokenPrice, resultMap,false);
                     }
                 } catch (Exception e) {
                     log.error(e.getMessage());
@@ -303,6 +587,40 @@ public class CoinGeckoServiceImpl implements CoinGeckoService {
             log.error(e.getMessage());
         }
         return resultMap;
+    }
+
+    private void batchSetPlatformInfo(List<ChainCoinGeckoEnum> coinGeckoEnumList,
+                                      TokenCategoryCoinGeckoDTO coinGeckoDTO,
+                                      CoinInfoResp onlineTokenInfo,
+                                      TokenPriceResp onlineTokenPrice,
+                                      Map<String, TokenInfoDTO> resultMap,
+                                      boolean isNative) {
+        if (CollectionUtils.isEmpty(coinGeckoEnumList)) {
+            return;
+        }
+        List<TokenCategoryCoinGeckoDTO> tokenCategoryUpdateList = new ArrayList<>();
+        List<TokenPriceDTO> tokenPriceDTOUpdateList = new ArrayList<>();
+        List<TokenInfoDTO> tokenInfoDTOUpdateList = new ArrayList<>();
+        for (ChainCoinGeckoEnum coinGeckoEnum : coinGeckoEnumList) {
+            coinGeckoDTO.setIsNative(isNative);
+            if (coinGeckoEnum != null) {
+                coinGeckoDTO.setChainId(coinGeckoEnum.getChainId());
+                TokenPriceDTO tokenPriceDTO = new TokenPriceDTO();
+                CoinInfoResp.DetailPlatform detailPlatform = onlineTokenInfo.getDetailPlatforms().getOrDefault(coinGeckoEnum.getCoinGeckoEnum().getPlatformChainId(), null);
+                setTokenInfoAndPrice(coinGeckoEnum.getChainId(), detailPlatform, onlineTokenInfo, onlineTokenPrice, coinGeckoDTO, tokenPriceDTO);
+                TokenInfoDTO tokenInfoDTO = convertTokenInfo(coinGeckoDTO, tokenPriceDTO, new TokenRiskGoplusDTO());
+                tokenCategoryUpdateList.add(coinGeckoDTO);
+                tokenPriceDTOUpdateList.add(tokenPriceDTO);
+                tokenInfoDTOUpdateList.add(tokenInfoDTO);
+                resultMap.put(ChainUtil.getCommonKey(tokenInfoDTO.getChainId(), tokenInfoDTO.getAddress()), tokenInfoDTO);
+            }
+        }
+        CompletableFuture.runAsync(() -> {
+            //批量更新 可以异步优化
+            tokenCategoryDataService.batchInsertOrUpdate(tokenCategoryUpdateList);
+            tokenPriceDataService.batchInsertOrUpdate(tokenPriceDTOUpdateList);
+            tokenInfoService.batchInsertOrUpdate(tokenInfoDTOUpdateList);
+        });
     }
 
     private void setPlatformInfo(ChainCoinGeckoEnum coinGeckoEnum,
@@ -315,7 +633,7 @@ public class CoinGeckoServiceImpl implements CoinGeckoService {
         if (coinGeckoEnum != null) {
             coinGeckoDTO.setChainId(coinGeckoEnum.getChainId());
             TokenPriceDTO tokenPriceDTO = new TokenPriceDTO();
-            CoinInfoResp.DetailPlatform detailPlatform = onlineTokenInfo.getDetailPlatforms().getOrDefault(coinGeckoEnum.getCoinGeckoEnum().getPlatformChainId(),null);
+            CoinInfoResp.DetailPlatform detailPlatform = onlineTokenInfo.getDetailPlatforms().getOrDefault(coinGeckoEnum.getCoinGeckoEnum().getPlatformChainId(), null);
             setTokenInfoAndPrice(coinGeckoEnum.getChainId(), detailPlatform, onlineTokenInfo, onlineTokenPrice, coinGeckoDTO, tokenPriceDTO);
             TokenInfoDTO tokenInfoDTO = convertTokenInfo(coinGeckoDTO, tokenPriceDTO, new TokenRiskGoplusDTO());
             tokenCategoryDataService.insertOrUpdate(coinGeckoDTO);
@@ -377,6 +695,14 @@ public class CoinGeckoServiceImpl implements CoinGeckoService {
                 Map<String, BigDecimal> tokenPrices = dexTokensPriceResp.getData().getAttributes().getTokenPrices();
                 tokenPrices.forEach((key, value) -> {
                     TokenInfoDTO tokenInfoDTO = first.get(ChainUtil.getCommonKey(chainId, key));
+                    if (tokenInfoDTO == null) {
+                        // TODO Fix the capitalization and lowercase issues. To be optimized.
+                        tokenInfoDTO = first.values().stream().filter(e -> StringUtils.hasText(e.getAddress()) && e.getAddress().equalsIgnoreCase(key)).findFirst().orElse(null);
+                        if (tokenInfoDTO == null) {
+                            log.warn("updateOnchainPrice tokenInfoDTO is null");
+                            return;
+                        }
+                    }
                     tokenInfoDTO.setRealPrice(value);
                     tokenInfoService.insertOrUpdate(tokenInfoDTO);
 
@@ -399,126 +725,107 @@ public class CoinGeckoServiceImpl implements CoinGeckoService {
         });
         return first;
     }
+
     @Override
     public List<TokenOhlcvDTO> getPlatformTokenOhlcv(Long chainId, String address, IntervalEnum interval) {
         return kLineService.getTokenOhlcv(chainId, address, interval);
     }
 
-
-    private static void setTokenInfoAndPrice(Long chainId,
-                                             @Nullable CoinInfoResp.DetailPlatform detailPlatform,
-                                             CoinInfoResp oldTokenCategory,
-                                             TokenPriceResp oldTokenPrice,
-                                             TokenCategoryCoinGeckoDTO newTokenCategoryCoinGeckoDTO,
-                                             TokenPriceDTO newTokenPrice) {
-        // token
-        setPlatformTokenInfo(oldTokenCategory, detailPlatform, newTokenCategoryCoinGeckoDTO);
-        newTokenCategoryCoinGeckoDTO.setChainId(chainId);
-//        newTokenCategoryCoinGeckoDTO.setCoingeckoChainId(ChainUtil.getChainAndCoinGeckoMap().get(chainId).getCoinGeckoEnum().getPlatformChainId());
-        // price
-        setPlatformTokenPrice(newTokenPrice, oldTokenPrice, oldTokenCategory);
-        newTokenPrice.setChainId(chainId);
-        newTokenPrice.setAddress(oldTokenCategory.getContractAddress());
-    }
-
-
-    private static void setPlatformTokenInfo(CoinInfoResp platformCoinInfo,
-                                             CoinInfoResp.DetailPlatform detailPlatform,
-                                             TokenCategoryCoinGeckoDTO newTokenCategoryCoinGeckoDTO) {
-        if (detailPlatform != null) {
-            newTokenCategoryCoinGeckoDTO.setAddress(detailPlatform.getContractAddress());
-            newTokenCategoryCoinGeckoDTO.setDecimals(detailPlatform.getDecimalPlace());
+    @Override
+    public List<CoinPriceResp> batchOnchainCoinPrice(List<OnchainTokenReq> rawTokenList, boolean b) {
+//        Map<String, TokenInfoDTO> resultMap = new ConcurrentHashMap<>();
+        List<CoinPriceResp> resultList = new ArrayList<>();
+        if (CollectionUtils.isEmpty(rawTokenList) || rawTokenList.size() > 300) {
+            return resultList;
         }
-        if (platformCoinInfo != null) {
-            newTokenCategoryCoinGeckoDTO.setCoingeckoCoinId(platformCoinInfo.getId());
-            newTokenCategoryCoinGeckoDTO.setName(platformCoinInfo.getName());
-            newTokenCategoryCoinGeckoDTO.setSymbol(platformCoinInfo.getSymbol());
-            newTokenCategoryCoinGeckoDTO.setImageUrl(platformCoinInfo.getImage().getSmall());
-            if (platformCoinInfo.getLinks() != null) {
-                if (!CollectionUtils.isEmpty(platformCoinInfo.getLinks().getHomepage()) && StringUtils.hasLength(platformCoinInfo.getLinks().getHomepage().get(0))) {
-                    newTokenCategoryCoinGeckoDTO.setWebsiteUrl(platformCoinInfo.getLinks().getHomepage().get(0));
-                }
-                if (StringUtils.hasLength(platformCoinInfo.getLinks().getTwitterScreenName())) {
-                    newTokenCategoryCoinGeckoDTO.setTwitterUrl(String.format("https://x.com/%s", platformCoinInfo.getLinks().getTwitterScreenName()));
-                }
-                if (StringUtils.hasLength(platformCoinInfo.getLinks().getTelegramChannelIdentifier())) {
-                    newTokenCategoryCoinGeckoDTO.setTelegramUrl(String.format("https://t.me/%s", platformCoinInfo.getLinks().getTelegramChannelIdentifier()));
+
+        // 数据库查
+        List<TokenBase> list = rawTokenList.stream().map(e -> new TokenBase(e.getAddress(), e.getChainId())).toList();
+        Pair<Map<String, TokenInfoDTO>, List<TokenBase>> tokenInfoFromDB = getTokenInfoFromDB(list);
+        // 已经存在了的结果
+        Map<String, TokenInfoDTO> first = tokenInfoFromDB.getFirst();
+        // 不存在的结果
+        List<TokenBase> second = tokenInfoFromDB.getSecond();
+
+
+        if (!CollectionUtils.isEmpty(first)) {
+            Map<String, TokenInfoDTO> existMap = updateOnchainPrice(first);
+            existMap.values().stream().map(e -> {
+                CoinPriceResp coinPriceResp = buildCoinPriceResp(e);
+                return coinPriceResp;
+            }).forEach(resultList::add);
+        }
+
+
+        List<OnchainTokenReq> tokenList = second.stream().map(e -> new OnchainTokenReq(e.getChainId(), e.getAddress())).toList();
+
+        Map<Long, List<OnchainTokenReq>> chainTokenMap = tokenList.stream()
+                .filter(e -> StringUtils.hasText(e.getAddress()) && Objects.nonNull(e.getChainId()))
+                .collect(Collectors.groupingBy(OnchainTokenReq::getChainId));
+        List<OnchainTokenReq> nativeTokenList = tokenList.stream()
+                .filter(e -> !StringUtils.hasText(e.getAddress()) && Objects.nonNull(e.getChainId()))
+                .toList();
+
+        chainTokenMap.forEach((chainId, tokens) -> {
+            // 分隔成一组组
+            List<List<OnchainTokenReq>> partitions = getPartitions(tokens, 30);
+            // 遍历每组
+            for (List<OnchainTokenReq> partition : partitions) {
+                Map<String, TokenInfoDTO> map = singleOnchainTokenInfoAndPrice(partition, false, true);
+                for (TokenInfoDTO dto : map.values()) {
+                    CoinPriceResp coinPriceResp = buildCoinPriceResp(dto);
+                    resultList.add(coinPriceResp);
                 }
             }
-        }
-    }
-
-    private static void setPlatformTokenPrice(TokenPriceDTO newTokenPrice,
-                                              TokenPriceResp tokenPriceResp,
-                                              CoinInfoResp platformCoinInfo) {
-        newTokenPrice.setRealPrice(BigDecimal.valueOf(tokenPriceResp.getRealPrice()));
-        newTokenPrice.setVolume24h(BigDecimal.valueOf(tokenPriceResp.getVolume24h()));
-        newTokenPrice.setChange24h(BigDecimal.valueOf(tokenPriceResp.getChange24h()));
-        newTokenPrice.setMarketCap(BigDecimal.valueOf(tokenPriceResp.getMarketCap()));
-        if (platformCoinInfo.getMarketData() != null && platformCoinInfo.getMarketData().getFullyDilutedValuation() != null) {
-            newTokenPrice.setFdvUsd(platformCoinInfo.getMarketData().getFullyDilutedValuation().getUsd());
-        }
-        if (platformCoinInfo.getMarketData() != null && platformCoinInfo.getMarketData().getTotalSupply() != null) {
-            newTokenPrice.setTotalSupply(platformCoinInfo.getMarketData().getTotalSupply().setScale(0, RoundingMode.FLOOR));
-        }
-    }
-
-
-    private static TokenCategoryCoinGeckoDTO setOnchainTokenInfo(DexTokenResp.DexData.Attributes attributes) {
-        TokenCategoryCoinGeckoDTO newTokenInfo = new TokenCategoryCoinGeckoDTO();
-        newTokenInfo.setIsNative(false);
-        newTokenInfo.setAddress(attributes.getAddress());
-        newTokenInfo.setCoingeckoCoinId(attributes.getCoingeckoCoinId());
-        newTokenInfo.setDecimals(attributes.getDecimals());
-        newTokenInfo.setName(attributes.getName());
-        newTokenInfo.setSymbol(attributes.getSymbol());
-        String imageUrl = attributes.getImageUrl();
-        if (!"missing.png".equals(imageUrl)) {
-            newTokenInfo.setImageUrl(imageUrl);
-        }
-        return newTokenInfo;
-    }
-
-    private static TokenPriceDTO setOnchainTokenPrice(Long chainId,
-                                                      DexTokenResp.DexData.Attributes attributes) {
-        TokenPriceDTO tokenPriceDTO = new TokenPriceDTO();
-        tokenPriceDTO.setChainId(chainId);
-        tokenPriceDTO.setAddress(attributes.getAddress());
-        if (attributes.getVolumeUsd() != null && attributes.getVolumeUsd().getH24() != null) {
-            tokenPriceDTO.setVolume24h(attributes.getVolumeUsd().getH24());
-        }
-        if (attributes.getPriceUsd() != null) {
-            tokenPriceDTO.setRealPrice(attributes.getPriceUsd());
-        }
-        if (attributes.getMarketCapUsd() != null) {
-            BigDecimal marketCapUsd = attributes.getMarketCapUsd();
-            if (attributes.getFdvUsd() != null && attributes.getMarketCapUsd().compareTo(attributes.getFdvUsd()) > 0) {
-                marketCapUsd = attributes.getFdvUsd();
+        });
+        List<PlatformTokenReq> platFormTokenReqList = nativeTokenList
+                .stream()
+                .map(e -> {
+                    PlatformTokenReq tokenReq = new PlatformTokenReq();
+                    ChainCoinGeckoEnum chainCoinGeckoEnum = ChainUtil.getChainAndCoinGeckoMap().get(e.getChainId());
+                    if (chainCoinGeckoEnum != null) {
+                        tokenReq.setCoingeckoCoinId(chainCoinGeckoEnum.getCoinGeckoEnum().getCoinId());
+                    } else {
+                        log.error("CoinGeckoServiceImpl batchOnchainCoinInfoAndPrice chainId not exist:{}", e.getChainId());
+                    }
+                    return tokenReq;
+                }).toList();
+        Map<String, TokenPriceResp> nativeTokenPriceMap = batchPlatformPrice(platFormTokenReqList);
+        if (!CollectionUtils.isEmpty(nativeTokenPriceMap)) {
+            for (OnchainTokenReq req : nativeTokenList) {
+                ChainCoinGeckoEnum chainCoinGeckoEnum = ChainUtil.getChainAndCoinGeckoMap().get(req.getChainId());
+                if (chainCoinGeckoEnum == null) {
+                    continue;
+                }
+                String coinGeckoCoinId = chainCoinGeckoEnum.getCoinGeckoEnum().getCoinId();
+                TokenPriceResp tokenPrice = nativeTokenPriceMap.get(coinGeckoCoinId);
+                if (tokenPrice == null) {
+                    continue;
+                }
+                CoinPriceResp coinPriceResp = new CoinPriceResp();
+                coinPriceResp.setChainId(req.getChainId());
+                coinPriceResp.setAddress("");
+                coinPriceResp.setIsNative(true);
+                coinPriceResp.setRealPrice(tokenPrice.getRealPrice() == null ? null : BigDecimal.valueOf(tokenPrice.getRealPrice()));
+                coinPriceResp.setVolume24h(tokenPrice.getVolume24h() == null ? null : BigDecimal.valueOf(tokenPrice.getVolume24h()));
+                coinPriceResp.setChange24h(tokenPrice.getChange24h() == null ? null : BigDecimal.valueOf(tokenPrice.getChange24h()));
+                resultList.add(coinPriceResp);
             }
-            tokenPriceDTO.setMarketCap(marketCapUsd);
         }
-        if (attributes.getFdvUsd() != null) {
-            tokenPriceDTO.setFdvUsd(attributes.getFdvUsd());
-        }
-        if (attributes.getPriceChangePercentage() != null) {
-            tokenPriceDTO.setChange24h(attributes.getPriceChangePercentage().getH24());
-        }
-        if (attributes.getTotalSupply() != null && attributes.getDecimals() != null) {
-            tokenPriceDTO.setTotalSupply(attributes.getTotalSupply().movePointLeft(attributes.getDecimals()).setScale(0, RoundingMode.FLOOR));
-        }
-        return tokenPriceDTO;
+        return resultList;
+
     }
 
-    public static String listToString(List<String> list) {
-        return String.join(",", list);
-    }
-
-    public static <T> List<List<T>> getPartitions(List<T> tokens, int partitionNum) {
-        List<List<T>> partitions = new LinkedList<>();
-        for (int i = 0; i < tokens.size(); i += partitionNum) {
-            partitions.add(tokens.subList(i, Math.min(i + partitionNum, tokens.size())));
-        }
-        return partitions;
+    @NotNull
+    private static CoinPriceResp buildCoinPriceResp(TokenInfoDTO dto) {
+        CoinPriceResp coinPriceResp = new CoinPriceResp();
+        coinPriceResp.setChainId(dto.getChainId());
+        coinPriceResp.setAddress(dto.getAddress());
+        coinPriceResp.setIsNative(false);
+        coinPriceResp.setRealPrice(dto.getRealPrice());
+        coinPriceResp.setVolume24h(dto.getVolume24h());
+        coinPriceResp.setChange24h(dto.getChange24h());
+        return coinPriceResp;
     }
 
 
@@ -536,5 +843,125 @@ public class CoinGeckoServiceImpl implements CoinGeckoService {
         Map<String, TokenInfoDTO> infoDTOMap = tokenInfoDTOS.stream().collect(Collectors.toMap(TokenInfoDTO::getId, Function.identity()));
         List<TokenBase> list = tokenBases.stream().filter(a -> !allCacheToken.contains(a.getId())).toList();
         return Pair.of(infoDTOMap, list);
+    }
+
+
+    public <T> Pair<List<T>, List<OnchainTokenReq>> queryCachedOnChainData(List<OnchainTokenReq> reqs, String prefix) {
+        if (CollectionUtils.isEmpty(reqs)) {
+            return Pair.of(List.of(), List.of());
+        }
+
+        List<String> keys = reqs.stream()
+                .map(req -> prefix + req.getChainId() + "_" + req.getAddress())
+                .toList();
+        List<Object> objects = redisTemplate.opsForValue().multiGet(keys);
+        if (CollectionUtils.isEmpty(objects)) {
+            return Pair.of(List.of(), reqs);
+        }
+
+        List<T> onChainData = new ArrayList<>();
+        List<OnchainTokenReq> notExist = new ArrayList<>();
+        for (int i = 0; i < objects.size(); i++) {
+            Object obj = objects.get(i);
+            if (obj != null) {
+                T data = objectMapper.convertValue(obj, new TypeReference<T>() {
+                });
+                onChainData.add(data);
+            } else {
+                notExist.add(reqs.get(i));
+            }
+        }
+
+        return Pair.of(onChainData, notExist);
+    }
+
+
+    public Pair<List<OnChainTokenInfo>, List<OnChainTokenPrice>> fetchOnChainTokenInfoAndPrice(List<OnchainTokenReq> reqs) {
+        if (CollectionUtils.isEmpty(reqs)) {
+            return Pair.of(List.of(), List.of());
+        }
+        Map<Long, List<OnchainTokenReq>> chainTokenMap =
+                reqs.stream()
+                        .filter(e -> StringUtils.hasText(e.getAddress()) && Objects.nonNull(e.getChainId()))
+                        .collect(Collectors.groupingBy(OnchainTokenReq::getChainId));
+        List<List<OnchainTokenReq>> chucked = new ArrayList<>();
+        chainTokenMap.forEach((chainId, tokens) -> {
+            List<List<OnchainTokenReq>> partitions = ListUtils.partition(tokens, onChainTokenInfoChuck);
+            chucked.addAll(partitions);
+        });
+
+        List<List<List<OnchainTokenReq>>> concurrent = ListUtils.partition(chucked, onChainFetchTokenInfoConcurrent);
+        List<Pair<List<OnChainTokenInfo>, List<OnChainTokenPrice>>>
+                onChainTokenInfoAndPriceList = concurrent.stream()
+                .map(partitions -> {
+                    List<CompletableFuture<Pair<List<OnChainTokenInfo>, List<OnChainTokenPrice>>>>
+                            futures = partitions.stream()
+                            .map(partition -> CompletableFuture.supplyAsync(() -> doCgsOnChainInfoFetch(partition)))
+                            .toList();
+                    return futures.stream()
+                            .map(CompletableFuture::join)
+                            .collect(Collectors.toList());
+                })
+                .flatMap(Collection::stream)
+                .toList();
+
+        List<OnChainTokenInfo> onChainTokenInfos = onChainTokenInfoAndPriceList.stream()
+                .map(Pair::getFirst)
+                .flatMap(Collection::stream)
+                .toList();
+        List<OnChainTokenPrice> onChainTokenPrices = onChainTokenInfoAndPriceList.stream()
+                .map(Pair::getSecond)
+                .flatMap(Collection::stream)
+                .toList();
+
+        return Pair.of(onChainTokenInfos, onChainTokenPrices);
+    }
+
+    private Pair<List<OnChainTokenInfo>, List<OnChainTokenPrice>> doCgsOnChainInfoFetch(List<OnchainTokenReq> reqs) {
+        if (CollectionUtils.isEmpty(reqs)) {
+            return Pair.of(List.of(), List.of());
+        }
+
+        Map<String, TokenInfoDTO> stringTokenInfoDTOMap = singleOnchainTokenInfoAndPrice(reqs, false, false);
+        List<OnChainTokenInfo> onChainTokenInfos = new ArrayList<>();
+        List<OnChainTokenPrice> onChainTokenPrices = new ArrayList<>();
+        stringTokenInfoDTOMap.forEach((key, value) -> {
+            OnChainTokenInfo onChainTokenInfo = new OnChainTokenInfo();
+            onChainTokenInfo.setChainId(value.getChainId());
+            onChainTokenInfo.setTokenContractAddress(value.getAddress());
+            onChainTokenInfo.setChainName(ChainUtil.getChainAndCoinGeckoMap().get(value.getChainId()).getChainEnum().getChainName());
+            onChainTokenInfo.setTokenName(value.getName());
+            onChainTokenInfo.setTokenSymbol(value.getSymbol());
+            onChainTokenInfo.setDecimals(value.getDecimals());
+            onChainTokenInfos.add(onChainTokenInfo);
+
+            OnChainTokenPrice onChainTokenPrice = new OnChainTokenPrice();
+            onChainTokenPrice.setChainId(value.getChainId());
+            onChainTokenPrice.setTokenContractAddress(value.getAddress());
+            onChainTokenPrice.setPriceUsd(value.getRealPrice());
+            onChainTokenPrices.add(onChainTokenPrice);
+        });
+
+        return Pair.of(onChainTokenInfos, onChainTokenPrices);
+    }
+
+    public void updateTokenInfoAndPriceCache(Pair<List<OnChainTokenInfo>, List<OnChainTokenPrice>> pair) {
+        List<OnChainTokenInfo> onChainTokenInfos = pair.getFirst();
+        List<OnChainTokenPrice> onChainTokenPrices = pair.getSecond();
+        if (!CollectionUtils.isEmpty(onChainTokenInfos)) {
+            Map<String, Object> tokenInfoMap = onChainTokenInfos.stream()
+                    .collect(Collectors.toMap(onChainTokenInfo -> REDIS_TOKEN_INFO_PREFIX + onChainTokenInfo.getChainId() + "_" + onChainTokenInfo.getTokenContractAddress(),
+                            onChainTokenInfo -> onChainTokenInfo));
+            redisTemplate.opsForValue().multiSet(tokenInfoMap);
+        }
+
+        if (!CollectionUtils.isEmpty(onChainTokenPrices)) {
+            Map<String, Object> tokenPriceMap = onChainTokenPrices.stream()
+                    .collect(Collectors.toMap(onChainTokenPrice -> REDIS_TOKEN_PRICE_PREFIX + onChainTokenPrice.getChainId() + "_" + onChainTokenPrice.getTokenContractAddress(),
+                            onChainTokenPrice -> onChainTokenPrice));
+            redisTemplate.opsForValue().multiSet(tokenPriceMap);
+        }
+
+
     }
 }
